--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Coming soon...</title>
+    <title>Cool Bros @ Allan Drive</title>
+    <link rel="shortcut icon" href="ADMSLogo.jpg">
   </head>
   
-  <h1>Coming Soon...</h1>
-  <p>Please be patient, our website is coming soon!!!</p>
+
