--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1>Zoraiz Saleh</h1>
   <p class="title">CEO & Founder Of this website</p>
   <p>Student At Allan Drive Middle School</p>
-  <p><button><a href="https://contactlinkzoraiz.thatzoegamer.repl.co">Contact</a></button></p>
+  <p><button><a href="zoraizoe@gmail.com">Contact</a></button></p>
 </div>
     
     
