--- a/allandrivemiddleschool.html
+++ b/allandrivemiddleschool.html
@@ -2,13 +2,13 @@
 <html>
   <head>
   <title>Cool Bros | Allan Drive Middle School</title>
-  <link rel="shortcut icon" href="">
+  <link rel="shortcut icon" href="ADMSLogo.jpeg">
   </head>
   <body>
     
     <div class="container">
-  <img src="" alt="Snow" style="width:100%;">
-  <div class="centered">Centered</div>
+  <img src="ADMS.jpeg" alt="Snow" style="width:100%;">
+  <div class="centered">At Allan Drive We Take Care Of Ourselfs And Each Other...</div>
       
       <style>
         /* Container holding the image and the text */
@@ -52,6 +52,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: red;
 }
       </style>
   
