--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1>Zoraiz Saleh</h1>
   <p class="title">CEO & Founder Of this website</p>
   <p>Student At Allan Drive Middle School</p>
-  <p><button><a href = "mailto: zoraizoe@gmail.com">Email Zoraiz Saleh</a></button></p>
+  <p><button><a href = "mailto: tzg@my5family.onmicrosoft.com">Email Zoraiz Saleh</a></button></p>
 </div>
     
     
