--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="card">
-  <img src="img.jpg" alt="John" style="width:100%">
+  <img src="\Zoraiz Raptors.JPG" alt="John" style="width:100%">
   <h1>Zoraiz Saleh</h1>
   <p class="title">CEO & Founder Of this website</p>
   <p>Student At Allan Drive Middle School</p>
