--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
     
     <div class="card">
-  <img src="\" alt="John" style="width:100%">
+  <img src="\Nathan Pic.jpg" alt="John" style="width:100%">
   <h1>Nathan Tran</h1>
   <p class="title">Coder & Helper of this website</p>
   <p>Student At Allan Drive Middle School</p>
