--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   
   
-  <h1>Welcome To Cool Bros Website!!!</h1>
+  <h1 class="cooltzg">Welcome To Cool Bros Website!!!</h1>
   
   <p class="cooltzg">We are happy you are here, to start, lets show you about us!!!</p>
  
@@ -43,7 +43,7 @@
       
       .cooltzg {
        color: white;
-       font-family: arial;
+       text-align: center;
       }
       
       body {
