--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="shortcut icon" href="ADMSLogo.jpeg">
   </head>
   <body>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
   
   
   
@@ -44,6 +48,7 @@
       .cooltzg {
        color: white;
        text-align: center;
+       font-family: 'Roboto', sans-serif;
       }
       
       body {
