--- a/allandrivemiddleschool.html
+++ b/allandrivemiddleschool.html
@@ -104,6 +104,7 @@ body {
       <center>
         <h1 class="heading-menu">Check out whats happening at Allan Drive Right Now!!!</h1>
         <a href=""><button class="button"><span>Check out Some Videos Made By The Owners!!!</span></button></a>
+        <a href="\index.html"><button class="button"><span>Go Back To The Main Menu.</span></button></a>
         
       </center>
       
