--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Cool Bros @ Allan Drive</title>
     <link rel="shortcut icon" href="ADMSLogo.jpeg">
+    <link rel="stylesheet" href="indexstylesheet.css"
   </head>
   <body>
     
