--- a/allandrivemiddleschool.html
+++ b/allandrivemiddleschool.html
@@ -3,6 +3,7 @@
   <head>
   <title>Cool Bros | Allan Drive Middle School</title>
   <link rel="shortcut icon" href="ADMSLogo.jpeg">
+  <link rel="stylesheet" href="adms-stylesheet.css"
   </head>
   <body>
     
